# paquet-facile

./: README.md  justfile  main.py  paquet_facile.py  pyproject.toml  release.py  search-and-replace.yml
.claude/: settings.local.json
.github/workflows/: ci-main.yml
blog/templates/sites_conformes_blog/: blog_index_page.html  tags_list_page.html
config/: urls.py
content_manager/: fields.py  registry.py  urls.py
content_manager/blocks/: basics.py  heros.py  medias.py
content_manager/management/commands/: create_demo_pages.py  shell.py
content_manager/templates/sites_conformes_content_manager/: content_page.html
content_manager/tests/: test_blocks.py
dashboard/templates/wagtailadmin/: login.html
demo/: README.md  justfile  pyproject.toml
demo/annuaire/: api.py  apps.py  blocks.py  models.py
demo/annuaire/migrations/: 0001_initial.py
demo/demo/: blocks.py  urls.py
demo/demo/settings/: base.py
docs/: README.md  changelog.md  conf.py  git-blame-ignore-revs.md  index.md  migration.md  pr-description-git-blame-ignore-revs.md
docs/guide/: blocs-personnalises.md  cas-pratique-annuaire.md  configuration.md  installation.md
management/commands/: migrate_from_sites_faciles.py
sites_conformes/: README.md  pyproject.toml
templates/: README.template.md  apps.template.py  pyproject.template.toml
templates/blocks/: header.html
templates/content_manager/: fields.template.py  registry.template.py
templates/core/: apps.template.py  fields.template.py  registry.template.py
wagtail_dsfr/wagtail_dsfr/: __init__.py  apps.py
(+88 files in other folders)
