[project]
name = "demo"
version = "0.1.0"
description = "Demo Wagtail site using sites_faciles"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "sites-conformes",
]

[tool.uv.sources]
sites-conformes = { path = "../sites_conformes", editable = true }

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
